feat(coaching): 코칭 API 계약 업데이트